--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,29 +11,13 @@
   <!-- A-Frame Extras for GLTF manipulation -->
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.2.0/dist/aframe-extras.min.js"></script>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-    }
-
-    #root {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
+    body { margin: 0; padding: 0; overflow-x: hidden; }
+    #root { height: 100vh; display: flex; flex-direction: column; }
     /* Hide A-Frame UI when not in VR to keep React UI clean */
-    .a-canvas {
-      z-index: 0 !important;
-      position: absolute !important;
-    }
-
-    .a-enter-vr {
-      z-index: 20 !important;
-    }
+    .a-canvas { z-index: 0 !important; position: absolute !important; }
+    .a-enter-vr { z-index: 20 !important; }
   </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
@@ -44,10 +28,7 @@
 }
 </script>
 </head>
-
 <body class="bg-slate-900 text-slate-100">
   <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
 </body>
-
 </html>
