--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THE GEAR - Global Educational AR/VR Repository</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- A-Frame for WebXR Support -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
