--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
         <!-- A-Frame Extras for GLTF manipulation -->
         <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.2.0/dist/aframe-extras.min.js"></script>
+        <!-- A-Frame Environment Component -->
+        <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
         <style>
             body {
                 margin: 0;
